--- a/public/form.html
+++ b/public/form.html
@@ -1,14 +1,7 @@
-<form
-    name="contact"
-    data-netlify="true"
-    data-netlify-honeypot="bot-field"
->
-  <input type="text" name="name" id="formName" >
-  <input type="email" name="email" id="formEmail">
-  <textare
-    id="formMessage"
-    name="message"
-  ></textarea>
+<form name="contact" data-netlify="true" data-netlify-honeypot="bot-field">
+  <input type="text" name="name" id="name"> <!-- Changed id to "name" -->
+  <input type="email" name="email" id="email"> <!-- Changed id to "email" -->
+  <textarea id="message" name="message"></textarea> <!-- Changed id to "message" -->
 
   <input type="hidden" name="form-name" value="contact" />
 </form>
