--- a/public/form.html
+++ b/public/form.html
@@ -3,5 +3,5 @@
   <input type="email" name="email" id="email"> <!-- Changed id to "email" -->
   <textarea id="message" name="message"></textarea> <!-- Changed id to "message" -->
 
-  <input type="hidden" name="form-name" value="contact" />
+  <input type="hidden" name="contact" value="contact" />
 </form>
