--- a/public/form.html
+++ b/public/form.html
@@ -1,7 +1,5 @@
-<form name="contact" data-netlify="true" data-netlify-honeypot="bot-field">
+<form name="contact" netlify hidden>
   <input type="text" name="name" id="name"> <!-- Changed id to "name" -->
   <input type="email" name="email" id="email"> <!-- Changed id to "email" -->
   <textarea id="message" name="message"></textarea> <!-- Changed id to "message" -->
-
-  <input type="hidden" name="contact" value="contact" />
 </form>
