--- a/public/form.html
+++ b/public/form.html
@@ -1,5 +1,5 @@
 <form name="contact" netlify hidden>
-  <input type="text" name="name" id="name"> <!-- Changed id to "name" -->
-  <input type="email" name="email" id="email"> <!-- Changed id to "email" -->
+  <input type="text" id="name" name="name"> <!-- Changed id to "name" -->
+  <input type="email" id="email" name="email"> <!-- Changed id to "email" -->
   <textarea id="message" name="message"></textarea> <!-- Changed id to "message" -->
 </form>
